Unsafe code refactoring.